# kick

./: BRIEF.txt  Cargo.toml  ISSUES.md  README.md  TEST_APIS.md  cargo_toml.txt  dog.json  logo.txt  stakeholder.txt
.eggs/: egg.001.local-flag-implementation-review.txt  egg.1.feature-gap-analysis.txt  egg.1.kick-project-analysis.txt  egg.2.project-state-comprehensive-update.txt  egg.2.uat-002-security-assessment.txt  egg.3.uat-003-plugin-config-implementation-assessment.txt  security_hardening_analysis.md
.session/: SESSION_LATEST.md
.uat/: FEATHER_CERTIFIED_v1.0_LEVEL2.md
archive/analysis-processed-20250910/: CONSIDERATION.md  STRAT.md
archive/analysis-processed-20250910/.eggs/: egg.1.project-state-analysis.txt  egg.1.uat-001-header-analysis.txt
archive/analysis-processed-20250910/.session/: SECURITY_BACKLOG.md  SESSION_1.md  SESSION_LATEST.md
archive/analysis-processed-20250910/.uat/: FEATHER_ASSESSMENT_TECHNICAL.md  FEATHER_CERTIFIED_v1.0_MVP.md  FEATHER_USABILITY_01.md
archive/analysis-processed-20250910/ROADMAP/TASKS/: README.md  UAT-001-DEFAULT-HEADERS.md  UAT-002-SECURITY-VALIDATION.md  UAT-SUMMARY-PRIORITIES.md
archive/src_ref/: client_rs.rs  main_rs.rs  streaming_rs.rs
config/: api_services.yaml  client.toml
docs/: CONCEPTS.md  ROADMAP.md
docs/ROADMAP/TASKS/: UAT-003-PLUGIN-CONFIG-LOADING.md
docs/eggs-01/: egg.1.kick-overview-architecture.txt  egg.2.gemini-analysis-insights.txt  egg.3.current-implementation-status.txt  egg.4.plugin-system-deep-dive.txt
src/: driver.rs  lib.rs  lib_rs.rs  main.rs  plugin_rs.rs
src/client/: mod.rs
src/config/: mod.rs
src/plugin/: mod.rs
src/sec/: mod.rs
src/storage/: mod.rs
src/streaming/: mod.rs
src_ref/: config_rs.rs  error_rs.rs  storage_rs.rs
tests/: default_headers_test.rs  driver_tests.rs  plugin_config_test.rs
