[package]
name = "kick"
description = "The official implementation of REBEL philosophy of developer ergonomics and productivity focus, framework/library"
license = "None (Private)"
repository = "https://github.com/oodx/rsb-framework"
version = "0.1.0"
edition = "2021"

[lib]
name = "kick"
path = "src/lib.rs"

[[bin]]
name = "kick"
path = "src/bin/kick.rs"

[[bin]]
name = "driver"
path = "src/bin/driver.rs"

[[bin]]
name = "test_config"
path = "src/bin/test_config.rs"

[dependencies]


hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
hyper-tls = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.5"
dirs = "6.0"
thiserror = "2.0.16"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
bytes = "1.0"
pin-project = "1.0"
mime = "0.3"
url = "2.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
clap = { version = "4.0", features = ["derive"] }
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
# Enable strict security checks that block local/private IPs (for production use)
# By default, KICK allows connections to localhost and private networks for development
strict-security = []

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
assert_matches = "1.5"
mockito = "1.4"
wiremock = "0.6"
